[project]
name = "HibiAPI"
version = "0.8.0"
description = "A program that implements easy-to-use APIs for a variety of commonly used sites"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "mixmoe", email = "admin@obfs.dev" }]
requires-python = ">=3.8,<4.0"
dependencies = [
    "fastapi<1.0.0,>=0.85.1",
    "httpx[http2]<0.24.0,>=0.21.3",
    "uvicorn[standard]<0.20,>=0.14",
    "confuse<2.0.0,>=1.4.0",
    "loguru<1.0.0,>=0.6.0",
    "python-dotenv<1.0.0,>=0.21.0",
    "qrcode[pil]<8.0,>=6.1",
    "pycryptodomex<4.0.0,>=3.10.1",
    "sentry-sdk<2.0.0,>=1.10.1",
    "pydantic<2.0.0,>=1.9.0",
    "python-multipart<1.0.0,>=0.0.5",
    "cashews[diskcache,redis]<5.0,>=3.3",
    "typing-extensions>=3.10",
    "typer[all]<1.0.0,>=0.6.1",
    "fastapi<1.0.0,>=0.85.1",
    "httpx[http2]<0.24.0,>=0.21.3",
    "uvicorn[standard]<0.20,>=0.14",
    "confuse<2.0.0,>=1.4.0",
    "loguru<1.0.0,>=0.6.0",
    "python-dotenv<1.0.0,>=0.21.0",
    "qrcode[pil]<8.0,>=6.1",
    "pycryptodomex<4.0.0,>=3.10.1",
    "sentry-sdk<2.0.0,>=1.10.1",
    "pydantic<2.0.0,>=1.9.0",
    "python-multipart<1.0.0,>=0.0.5",
    "cashews[diskcache,redis]<5.0,>=3.3",
    "typing-extensions>=3.10",
    "typer[all]<1.0.0,>=0.6.1",
]

[project.urls]
homepage = "https://api.obfs.dev"
repository = "https://github.com/mixmoe/HibiAPI"
documentation = "https://github.com/mixmoe/HibiAPI/wiki"

[project.optional-dependencies]
scripts = [
    "pyqt6<7.0.0,>=6.4.0",
    "pyqt6-webengine<7.0.0,>=6.4.0",
    "requests>=2.28.2",
]

[project.scripts]
hibiapi = "hibiapi.__main__:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.1.2",
    "pytest-httpserver<2.0.0,>=1.0.4",
    "pytest-cov<4.0.0,>=3.0.0",
    "pytest-benchmark<5.0.0,>=4.0.0",
    "pytest-pretty>=1.1.0",
    "ruff>=0.3.2",
]

[tool.pdm.build]
includes = []

[tool.pdm.scripts]
test = """pytest \
    --cov ./hibiapi/ \
    --cov-report xml \
    --cov-report term-missing \
    ./test"""
start = "hibiapi run"
format = "ruff --fix"

[tool.ruff]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
target-version = "py38"
