[project]
name = "HibiAPI"
version = "0.8.0"
description = "A program that implements easy-to-use APIs for a variety of commonly used sites"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "mixmoe", email = "admin@obfs.dev" }]
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.110.2",
    "httpx[http2]>=0.27.0",
    "uvicorn[standard]>=0.29.0",
    "confuse>=2.0.1",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "qrcode[pil]>=7.4.2",
    "pycryptodomex>=3.20.0",
    "sentry-sdk>=1.45.0",
    "pydantic<2.0.0,>=1.9.0",
    "python-multipart>=0.0.9",
    "cashews[diskcache,redis]>=7.0.2",
    "typing-extensions>=4.11.0",
    "typer[all]>=0.12.3",
]

[project.urls]
homepage = "https://api.obfs.dev"
repository = "https://github.com/mixmoe/HibiAPI"
documentation = "https://github.com/mixmoe/HibiAPI/wiki"

[project.optional-dependencies]
scripts = ["pyqt6>=6.6.1", "pyqt6-webengine>=6.6.0", "requests>=2.31.0"]

[project.scripts]
hibiapi = "hibiapi.__main__:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-httpserver>=1.0.10",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-pretty>=1.2.0",
    "ruff>=0.4.1",
]

[tool.pdm.build]
includes = []

[tool.pdm.scripts]
test = """pytest \
    --cov ./hibiapi/ \
    --cov-report xml \
    --cov-report term-missing \
    ./test"""
start = "hibiapi run"
lint = "ruff check"

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
target-version = "py39"
